Bugfixes and rewrote Arena main module.